feat: refact language